@@ -1,6 +1,7 @@
 version 0.99.5 - xx-Dec-2010
 . [NEW-MAC] Added Mac templates
 . [NEW-MAC] Added support for Fullscreen / window mode
+. [NEW-MAC] Added support for AutoScale if the window is resized / fullscreen
 . [FIX] Camera: uses points intead of pixels. Works OK in RetinaDisplay mode (issue #1023)
 . [FIX] Configuration: checks for possible glErrors. Only ask for max samples if iOS >= 4 (issue #1041)
 . [FIX] FileUtils: loads .gz / .ccz files correctly in RetinaDisplay mode (issue #1037)
